Align with schema
